# amazon-kinesis-video-streams-producer-sdk-cpp

./: .build.sh.swp  .gitignore  CMakeLists.txt  build.sh
CMake/: Utilities.cmake
CMake/Dependencies/: libcurl-CMakeLists.txt  libkvscproducer-CMakeLists.txt  liblog4cplus-CMakeLists.txt
output/arm64-v8a/lib/: libcrypto.so.1.1  libssl.so.1.1
output/arm64-v8a/lib/pkgconfig/: libcurl.pc  libssl.pc  openssl.pc
output/armeabi-v7a/include/openssl/: opensslconf.h
output/armeabi-v7a/lib/: libcrypto.so.1.1  libssl.so.1.1
output/armeabi-v7a/lib/cmake/CURL/: CURLConfigVersion.cmake  CURLTargets-release.cmake  CURLTargets.cmake
output/armeabi-v7a/lib/cmake/log4cplus/: log4cplusTargets.cmake
output/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libcurl.pc  libssl.pc
output/include/log4cplus/config/: defines.hxx
output/include/openssl/: opensslconf.h
output/x86/lib/: libcrypto.so.1.1  libssl.so.1.1
output/x86/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
output/x86_64/lib/: libcrypto.so.1.1  libssl.so.1.1
output/x86_64/lib/cmake/CURL/: CURLConfigVersion.cmake
output/x86_64/lib/cmake/log4cplus/: log4cplusTargets-release.cmake
output/x86_64/lib/pkgconfig/: libcrypto.pc  libcurl.pc  openssl.pc
src/: Logger.h
src/gstreamer/: gstkvssink.cpp  gstkvssink.h
